# mailpurge

./: .gitignore  README.md  headers.py  purge.py  pyproject.toml
src/mailpurge/: __main__.py  headers.py  purge.py
