[project]
name = "mailpurge"
version = "0.1.0"
description = ""
authors = [{ name = "Mathieu Lecarme", email = "mathieu@garambrogne.net" }]
readme = "README.md"
dependencies = [
    "imapclient == 3.*",
    "google-api-python-client >= 2.90",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "certifi",
    "pyyaml == 6.*",
    "orjson",
    "plyvel-ci== 1.5.*",
]

[tool.hatch]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
