[project]
name = "mailpurge"
requires-python = ">=3.10"
version = "0.1.0"
description = ""
authors = [{ name = "Mathieu Lecarme", email = "mathieu@garambrogne.net" }]
readme = "README.md"
dependencies = [
    "imapclient == 3.*",
    "google-api-python-client >= 2.151",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "certifi",
    "pyyaml == 6.*",
    "orjson",
    "plyvel-ci== 1.5.*",
    "jupyterlab (>=4.3.5,<5.0.0)",
    "ebooklib (>=0.18,<0.19)",
    "humanize (>=4.13.0,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
]

[tool.hatch]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
